eapli.base/base.core/src/main/java/gramaticas/script/GramaticaScriptParser.java
// Generated from C:/Users/User/Documents/lei20_21_s4_2dj_03/eapli.base/base.core/src/main/java/gramaticas/script\GramaticaScript.g4 by ANTLR 4.9.1
package gramaticas.script;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, FICHEIRO_TOKEN=16, 
		CONSULTAR=17, ATUALIZAR=18, NOVA_INFO=19, SE=20, REMETENTE=21, PASSWORD=22, 
		ASSUNTO=23, CORPO=24, DESTINATARIO=25, INT=26, WORD=27, EMAIL=28, TEXTO=29, 
		SPECIAL=30, UNDER=31, ADQUIRIR=32, SPACE=33, WS=34;
	public static final int
		RULE_start = 0, RULE_continuee = 1, RULE_consultar = 2, RULE_opcoesFicheiro = 3, 
		RULE_realizar = 4, RULE_operacao = 5, RULE_se = 6, RULE_verificarCondicao = 7, 
		RULE_opcoes = 8, RULE_operadores = 9, RULE_funcionalidade = 10, RULE_enviar = 11, 
		RULE_corpo = 12, RULE_fulltext = 13, RULE_adquirir = 14, RULE_adquirirOpcoes = 15, 
		RULE_atribuir = 16, RULE_atribuirOpcoes = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "continuee", "consultar", "opcoesFicheiro", "realizar", "operacao", 
			"se", "verificarCondicao", "opcoes", "operadores", "funcionalidade", 
			"enviar", "corpo", "fulltext", "adquirir", "adquirirOpcoes", "atribuir", 
			"atribuirOpcoes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\"'", "'-ATUALIZAR'", "'-SUM'", "'-DIV'", "'-SUB'", "'-MUL'", 
			"'P_'", "'-\"'", "'-MAIOR'", "'-MENOR'", "'-IGUAL'", "'-MESMO'", "'('", 
			"')'", "'-ATRIBUIR'", "'-FICHEIRO'", "'-CONSULTAR P_'", "'-ATUALIZAR P_'", 
			"'-INFO P_'", "'-SE'", "'-REMETENTE'", "'-PASSWORD'", "'-ASSUNTO'", "'-CORPO'", 
			"'-DESTINATARIO P_'", null, null, null, null, null, "'_'", "'~~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "FICHEIRO_TOKEN", "CONSULTAR", "ATUALIZAR", "NOVA_INFO", 
			"SE", "REMETENTE", "PASSWORD", "ASSUNTO", "CORPO", "DESTINATARIO", "INT", 
			"WORD", "EMAIL", "TEXTO", "SPECIAL", "UNDER", "ADQUIRIR", "SPACE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramaticaScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ContinueeContext continuee() {
			return getRuleContext(ContinueeContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			continuee();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinueeContext extends ParserRuleContext {
		public ConsultarContext consultar() {
			return getRuleContext(ConsultarContext.class,0);
		}
		public ContinueeContext continuee() {
			return getRuleContext(ContinueeContext.class,0);
		}
		public RealizarContext realizar() {
			return getRuleContext(RealizarContext.class,0);
		}
		public EnviarContext enviar() {
			return getRuleContext(EnviarContext.class,0);
		}
		public AtribuirContext atribuir() {
			return getRuleContext(AtribuirContext.class,0);
		}
		public ContinueeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continuee; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterContinuee(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitContinuee(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitContinuee(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContinueeContext continuee() throws RecognitionException {
		ContinueeContext _localctx = new ContinueeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_continuee);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case FICHEIRO_TOKEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				consultar();
				setState(40);
				continuee();
				}
				break;
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case SE:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				realizar();
				setState(43);
				continuee();
				}
				break;
			case REMETENTE:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				enviar();
				setState(46);
				continuee();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 5);
				{
				setState(48);
				atribuir();
				setState(49);
				continuee();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConsultarContext extends ParserRuleContext {
		public Token varFicheiro;
		public TerminalNode FICHEIRO_TOKEN() { return getToken(GramaticaScriptParser.FICHEIRO_TOKEN, 0); }
		public OpcoesFicheiroContext opcoesFicheiro() {
			return getRuleContext(OpcoesFicheiroContext.class,0);
		}
		public TerminalNode TEXTO() { return getToken(GramaticaScriptParser.TEXTO, 0); }
		public ConsultarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consultar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterConsultar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitConsultar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitConsultar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConsultarContext consultar() throws RecognitionException {
		ConsultarContext _localctx = new ConsultarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_consultar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(FICHEIRO_TOKEN);
			setState(54);
			match(T__0);
			setState(55);
			((ConsultarContext)_localctx).varFicheiro = match(TEXTO);
			setState(56);
			match(T__0);
			setState(57);
			opcoesFicheiro();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpcoesFicheiroContext extends ParserRuleContext {
		public OpcoesFicheiroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opcoesFicheiro; }
	 
		public OpcoesFicheiroContext() { }
		public void copyFrom(OpcoesFicheiroContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConsultarFileContext extends OpcoesFicheiroContext {
		public Token idVar;
		public Token parametroVar;
		public TerminalNode CONSULTAR() { return getToken(GramaticaScriptParser.CONSULTAR, 0); }
		public TerminalNode INT() { return getToken(GramaticaScriptParser.INT, 0); }
		public TerminalNode WORD() { return getToken(GramaticaScriptParser.WORD, 0); }
		public ConsultarFileContext(OpcoesFicheiroContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterConsultarFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitConsultarFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitConsultarFile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtualizarFileContext extends OpcoesFicheiroContext {
		public Token idVar;
		public Token parametroVar;
		public Token idVar2;
		public TerminalNode ATUALIZAR() { return getToken(GramaticaScriptParser.ATUALIZAR, 0); }
		public TerminalNode NOVA_INFO() { return getToken(GramaticaScriptParser.NOVA_INFO, 0); }
		public List<TerminalNode> INT() { return getTokens(GramaticaScriptParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GramaticaScriptParser.INT, i);
		}
		public TerminalNode WORD() { return getToken(GramaticaScriptParser.WORD, 0); }
		public AtualizarFileContext(OpcoesFicheiroContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterAtualizarFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitAtualizarFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitAtualizarFile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtualizarSomaFileContext extends OpcoesFicheiroContext {
		public Token parametroVar;
		public Token parametroVar2;
		public FulltextContext fulltext() {
			return getRuleContext(FulltextContext.class,0);
		}
		public TerminalNode INT() { return getToken(GramaticaScriptParser.INT, 0); }
		public List<TerminalNode> WORD() { return getTokens(GramaticaScriptParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(GramaticaScriptParser.WORD, i);
		}
		public AtualizarSomaFileContext(OpcoesFicheiroContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterAtualizarSomaFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitAtualizarSomaFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitAtualizarSomaFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OpcoesFicheiroContext opcoesFicheiro() throws RecognitionException {
		OpcoesFicheiroContext _localctx = new OpcoesFicheiroContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_opcoesFicheiro);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSULTAR:
				_localctx = new ConsultarFileContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(CONSULTAR);
				setState(60);
				((ConsultarFileContext)_localctx).idVar = match(INT);
				setState(61);
				match(T__0);
				setState(62);
				((ConsultarFileContext)_localctx).parametroVar = match(WORD);
				setState(63);
				match(T__0);
				}
				break;
			case ATUALIZAR:
				_localctx = new AtualizarFileContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				match(ATUALIZAR);
				setState(65);
				((AtualizarFileContext)_localctx).idVar = match(INT);
				setState(66);
				match(T__0);
				setState(67);
				((AtualizarFileContext)_localctx).parametroVar = match(WORD);
				setState(68);
				match(T__0);
				setState(69);
				match(NOVA_INFO);
				setState(70);
				((AtualizarFileContext)_localctx).idVar2 = match(INT);
				}
				break;
			case T__1:
				_localctx = new AtualizarSomaFileContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				match(T__1);
				setState(72);
				match(T__0);
				setState(73);
				((AtualizarSomaFileContext)_localctx).parametroVar = match(WORD);
				setState(74);
				match(T__0);
				setState(75);
				match(T__0);
				setState(76);
				fulltext();
				setState(77);
				match(T__0);
				setState(78);
				match(T__0);
				setState(79);
				((AtualizarSomaFileContext)_localctx).parametroVar2 = match(WORD);
				setState(80);
				match(T__0);
				setState(81);
				match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RealizarContext extends ParserRuleContext {
		public RealizarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realizar; }
	 
		public RealizarContext() { }
		public void copyFrom(RealizarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CalculoContext extends RealizarContext {
		public Token op;
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public CalculoContext(RealizarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterCalculo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitCalculo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitCalculo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfContext extends RealizarContext {
		public TerminalNode SE() { return getToken(GramaticaScriptParser.SE, 0); }
		public SeContext se() {
			return getRuleContext(SeContext.class,0);
		}
		public IfContext(RealizarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RealizarContext realizar() throws RecognitionException {
		RealizarContext _localctx = new RealizarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_realizar);
		int _la;
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
			case T__4:
			case T__5:
				_localctx = new CalculoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				((CalculoContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) ) {
					((CalculoContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(86);
				operacao();
				}
				break;
			case SE:
				_localctx = new IfContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(SE);
				setState(88);
				se();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacaoContext extends ParserRuleContext {
		public List<OpcoesContext> opcoes() {
			return getRuleContexts(OpcoesContext.class);
		}
		public OpcoesContext opcoes(int i) {
			return getRuleContext(OpcoesContext.class,i);
		}
		public OperacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterOperacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitOperacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitOperacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacaoContext operacao() throws RecognitionException {
		OperacaoContext _localctx = new OperacaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			opcoes();
			setState(92);
			opcoes();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeContext extends ParserRuleContext {
		public VerificarCondicaoContext verificarCondicao() {
			return getRuleContext(VerificarCondicaoContext.class,0);
		}
		public FuncionalidadeContext funcionalidade() {
			return getRuleContext(FuncionalidadeContext.class,0);
		}
		public SeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_se; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterSe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitSe(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitSe(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeContext se() throws RecognitionException {
		SeContext _localctx = new SeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_se);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			verificarCondicao();
			setState(95);
			funcionalidade();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerificarCondicaoContext extends ParserRuleContext {
		public List<OpcoesContext> opcoes() {
			return getRuleContexts(OpcoesContext.class);
		}
		public OpcoesContext opcoes(int i) {
			return getRuleContext(OpcoesContext.class,i);
		}
		public OperadoresContext operadores() {
			return getRuleContext(OperadoresContext.class,0);
		}
		public VerificarCondicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verificarCondicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterVerificarCondicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitVerificarCondicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitVerificarCondicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerificarCondicaoContext verificarCondicao() throws RecognitionException {
		VerificarCondicaoContext _localctx = new VerificarCondicaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_verificarCondicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			opcoes();
			setState(98);
			operadores();
			setState(99);
			opcoes();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpcoesContext extends ParserRuleContext {
		public OpcoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opcoes; }
	 
		public OpcoesContext() { }
		public void copyFrom(OpcoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TextoOpcaoContext extends OpcoesContext {
		public TerminalNode WORD() { return getToken(GramaticaScriptParser.WORD, 0); }
		public TextoOpcaoContext(OpcoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterTextoOpcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitTextoOpcao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitTextoOpcao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtribuirOpContext extends OpcoesContext {
		public FulltextContext fulltext() {
			return getRuleContext(FulltextContext.class,0);
		}
		public AtribuirOpContext(OpcoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterAtribuirOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitAtribuirOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitAtribuirOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InteiroContext extends OpcoesContext {
		public TerminalNode INT() { return getToken(GramaticaScriptParser.INT, 0); }
		public InteiroContext(OpcoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterInteiro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitInteiro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitInteiro(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberFileContext extends OpcoesContext {
		public Token varFicheiro;
		public Token idVar;
		public Token parametroVar;
		public TerminalNode FICHEIRO_TOKEN() { return getToken(GramaticaScriptParser.FICHEIRO_TOKEN, 0); }
		public TerminalNode CONSULTAR() { return getToken(GramaticaScriptParser.CONSULTAR, 0); }
		public TerminalNode TEXTO() { return getToken(GramaticaScriptParser.TEXTO, 0); }
		public TerminalNode INT() { return getToken(GramaticaScriptParser.INT, 0); }
		public TerminalNode WORD() { return getToken(GramaticaScriptParser.WORD, 0); }
		public NumberFileContext(OpcoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterNumberFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitNumberFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitNumberFile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AtributoFormContext extends OpcoesContext {
		public Token idVar;
		public TerminalNode INT() { return getToken(GramaticaScriptParser.INT, 0); }
		public AtributoFormContext(OpcoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).enterAtributoForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaScriptListener ) ((GramaticaScriptListener)listener).exitAtributoForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaScriptVisitor ) return ((GramaticaScriptVisitor<? extends T>)visitor).visitAtributoForm(this);
			else return visitor.visitChildren(this);
		}
	}
